--- a/Big Theatre/index.html
+++ b/Big Theatre/index.html
@@ -23,19 +23,19 @@
                 <nav class="header__menu menu">
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a href="" class="menu__link">Головна</a>
+                            <a href="#main" class="menu__link">Головна</a>
                         </li>
                         <li class="menu__item">
-                            <a href="" class="menu__link">Про театр</a>
+                            <a href="#about" class="menu__link">Про театр</a>
                         </li>
                         <li class="menu__item">
-                            <a href="" class="menu__link">Наші постановки</a>
+                            <a href="#productions" class="menu__link">Наші постановки</a>
                         </li>
                         <li class="menu__item">
-                            <a href="" class="menu__link">Партнери театру</a>
+                            <a href="#partners" class="menu__link">Партнери театру</a>
                         </li>
                         <li class="menu__item">
-                            <a href="" class="menu__link">Контакти</a>
+                            <a href="#contacts" class="menu__link">Контакти</a>
                         </li>
                     </ul>
                     <div class="aside__links">
@@ -88,7 +88,7 @@
             </div>
         </header>
         <main class="main">
-            <div class="mainblock1">
+            <div class="mainblock1" id="main">
                 <div class="mainblock1__container _container">
                     <div class="mainblock1__aside">
                         <p class="aside__text">контактна інформація</p>
@@ -136,7 +136,6 @@
                             </svg>
                         </a>
                     </div>
-
                     <div class="mainblock1__sec1">
                         <p class="mainblock1__sec1-txt1">
                             театр ім. Лесі Українки
@@ -193,7 +192,7 @@
                     </div>
                 </div>
             </div>
-            <div class="mainblok2">
+            <div class="mainblok2" id="about">
                 <div class="mainblock2__container _container">
                     <p class="mainblock2__header"><span>про</span> театр</p>
                     <div class="mainblock2__blocks">
@@ -227,6 +226,134 @@
                             <img src="/img/block2info.jpg" alt="">
                         </div>
 
+                    </div>
+                </div>
+            </div>
+            <div class="mainblock3" id="productions">
+                <p class="mainblock3__header _container"><span>наші</span> постановки</p>
+                <div class="mainblock3__container">
+                    <div class="image-slider1 swiper">
+                        <div class="image-slider__wrapper1 swiper-wrapper">
+                            <div class="image-slider__slide1 swiper-slide">
+                                <div class="image-slider__image1">
+                                    <a href="" class="slider__image-search">
+                                        <img src="img/search.png" alt="search logo">
+                                    </a>
+                                    <p class="slider__image-text1">лускунчик</p>
+                                    <p class="slider__image-text2">травень 2023</p>
+                                    <img src="img/block3__slide1.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="image-slider__slide1 swiper-slide">
+                                <div class="image-slider__image1">
+                                    <a href="" class="slider__image-search">
+                                        <img src="img/search.png" alt="search logo">
+                                    </a>
+                                    <p class="slider__image-text1">лускунчик</p>
+                                    <p class="slider__image-text2">травень 2023</p>
+                                    <img src="img/block3__slide2.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="image-slider__slide1 swiper-slide">
+                                <div class="image-slider__image1">
+                                    <a href="" class="slider__image-search">
+                                        <img src="img/search.png" alt="search logo">
+                                    </a>
+                                    <p class="slider__image-text1">Попелюшка</p>
+                                    <p class="slider__image-text2">липень 2023</p>
+                                    <img src="img/block3__slide3.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="image-slider__slide1 swiper-slide">
+                                <div class="image-slider__image1">
+                                    <a href="" class="slider__image-search">
+                                        <img src="img/search.png" alt="search logo">
+                                    </a>
+                                    <p class="slider__image-text1">снігова королева</p>
+                                    <p class="slider__image-text2">серпень 20203</p>
+                                    <img src="img/block3__slide4.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="mainblock4">
+                <div class="mainblock4__container">
+                    <div class="mainblock4__section">
+                        <div class="mainblock4__section-columns">
+                            <div class="mainblock4__section-column1">
+                                <p>2018</p>
+                                <p>2019</p>
+                                <p>2020</p>
+                            </div>
+                            <div class="mainblock4__section-column2">
+                                <div class="column2__stars">
+                                    <img src="img/star.svg" alt="">
+                                    <img src="img/star.svg" alt="">
+                                    <img src="img/star.svg" alt="">
+                                    <img src="img/star.svg" alt="">
+                                    <img src="img/star.svg" alt="">
+                                </div>
+                                <p class="column2__text">Найкращий театр <br> на думку театральних <br> критиків Парижа
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="mainblock5" id="partners">
+                <div class="mainblock5__container _container">
+                    <p class="mainblock5__header"><span>партнери</span> театру</p>
+                    <div class="mainblock5__slider">
+                        <div class="image-slider2 swiper">
+                            <div class="image-slider__wrapper2 swiper-wrapper">
+                                <div class="image-slider__slide2 swiper-slide">
+                                    <div class="image-slider__image2">
+                                        <img src="img/avada-media 1.png" alt="" />
+                                    </div>
+                                </div>
+                                <div class="image-slider__slide2 swiper-slide">
+                                    <div class="image-slider__image2">
+                                        <img src="img/space-lab.png" alt="" />
+                                    </div>
+                                </div>
+
+                                <div class="image-slider__slide2 swiper-slide">
+                                    <div class="image-slider__image2">
+                                        <img src="img/avada-media 1.png" alt="" />
+                                    </div>
+                                </div>
+                                <div class="image-slider__slide2 swiper-slide">
+                                    <div class="image-slider__image2">
+                                        <img src="img/space-lab.png" alt="" />
+                                    </div>
+                                </div>
+
+                                <div class="image-slider__slide2 swiper-slide">
+                                    <div class="image-slider__image2">
+                                        <img src="img/space-lab.png" alt="" />
+                                    </div>
+                                </div>
+                                <div class="image-slider__slide2 swiper-slide">
+                                    <div class="image-slider__image2">
+                                        <img src="img/avada-media 1.png" alt="" />
+                                    </div>
+                                </div>
+
+                                <div class="image-slider__slide2 swiper-slide">
+                                    <div class="image-slider__image2">
+                                        <img src="img/space-lab.png" alt="" />
+                                    </div>
+                                </div>
+                                <div class="image-slider__slide2 swiper-slide">
+                                    <div class="image-slider__image2">
+                                        <img src="img/avada-media 1.png" alt="" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
