--- a/Big Theatre/index.html
+++ b/Big Theatre/index.html
@@ -310,7 +310,18 @@
                         <div class="image-slider2 swiper">
                             <div class="image-slider__wrapper2 swiper-wrapper">
                                 <div class="image-slider__slide2 swiper-slide">
+                                    <div class="image-slider__image2 img">
+                                        <img src="img/avada-media 1.png" alt="" />
+                                    </div>
+                                </div>
+                                <div class="image-slider__slide2 swiper-slide">
                                     <div class="image-slider__image2">
+                                        <img src="img/space-lab.png" alt="" />
+                                    </div>
+                                </div>
+
+                                <div class="image-slider__slide2 swiper-slide">
+                                    <div class="image-slider__image2 img">
                                         <img src="img/avada-media 1.png" alt="" />
                                     </div>
                                 </div>
@@ -322,22 +333,11 @@
 
                                 <div class="image-slider__slide2 swiper-slide">
                                     <div class="image-slider__image2">
-                                        <img src="img/avada-media 1.png" alt="" />
-                                    </div>
-                                </div>
-                                <div class="image-slider__slide2 swiper-slide">
-                                    <div class="image-slider__image2">
-                                        <img src="img/space-lab.png" alt="" />
-                                    </div>
-                                </div>
-
-                                <div class="image-slider__slide2 swiper-slide">
-                                    <div class="image-slider__image2">
                                         <img src="img/space-lab.png" alt="" />
                                     </div>
                                 </div>
                                 <div class="image-slider__slide2 swiper-slide">
-                                    <div class="image-slider__image2">
+                                    <div class="image-slider__image2 img">
                                         <img src="img/avada-media 1.png" alt="" />
                                     </div>
                                 </div>
@@ -348,7 +348,7 @@
                                     </div>
                                 </div>
                                 <div class="image-slider__slide2 swiper-slide">
-                                    <div class="image-slider__image2">
+                                    <div class="image-slider__image2 img">
                                         <img src="img/avada-media 1.png" alt="" />
                                     </div>
                                 </div>
@@ -357,8 +357,58 @@
                     </div>
                 </div>
             </div>
+            <div class="mainblock6" id="contacts">
+                <div class="mainblock6__container _container">
+                    <p class="mainblock6__header"><span>стати</span> меценатом</p>
+                    <div class="mainblock6__columns">
+                        <div class="mainblock6__column1">
+                            <div class="mainblock6__column1-links">
+                                <p class="mainblock6__column1-link1"><a href="">+38 (095) 850-72-35</a></p>
+                                <p class="mainblock6__column1-link2"><a href="">+38 (095) 650-71-79</a></p>
+                                <p class="mainblock6__column1-link3 "><a class="link__decoration"
+                                        href="">info@theater.ua</a></p>
+                                <p class="mainblock6__column1-link4"><a href="">м. Київ, вул.Богдана Хмельницького
+                                        5140</a></p>
+                            </div>
+                        </div>
+                        <div class="mainblock6__column2">
+                            <div class="mainblock6__column2-inputs">
+                                <input class="mainblock6__column2-input1" type="text" placeholder="Ім'я">
+                                <input class="mainblock6__column2-input2" type="text" placeholder="Компанія">
+                                <input class="mainblock6__column2-input3" type="tel" placeholder="Телефон">
+                                <input class="mainblock6__column2-input4" type="email" placeholder="E-mail">
+                            </div>
+                            <p class="mainblock6__column2-text">* Ваші дані не будуть передані третім особам, 100%
+                                ймовірність. Конфіденційність ми
+                                гарантуємо та захищаємо персональні
+                                дані.</p>
+                        </div>
+                        <div class="mainblock6__column3">
+                            <textarea class="mainblock6__column3-textarea" name="message"
+                                placeholder="Повідомлення"></textarea>
+                            <button class="mainblock6__column3-button">
+                                <a class="mainblock6__column3-link" href="">Надіслати</a>
+                            </button>
+                            <p class="mainblock6__column3-text">* Ваші дані не будуть передані третім особам, 100%
+                                ймовірність. Конфіденційність ми
+                                гарантуємо та захищаємо персональні
+                                дані.</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </main>
-        <footer class="footer">FOOTER</footer>
+        <footer class="footer">
+            <div class="footer__container _container">
+                <span class="footer__span"></span>
+                <div class="footer__text-container">
+                    <p class="footer__text footer__text1">© 2022 Національний академічний драматичний театр ім. Лесі
+                        Українки</p>
+                    <p class="footer__text footer__text2">Розроблено SpaceLab</p>
+                </div>
+            </div>
+        </footer>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
